@@ -2,7 +2,9 @@ Changelog for hydra
 -------------------
 
 Release 8.1-pre
+* Found login:password combinations are now printed with the name specified (hostname or IP), not always IP
 * Fixed the -M option, works now with many many targets :-)
+* -M option now supports ports, add a colon in between: "host:port", or, if IPv6, "[ipv6ipaddress]:port"
 * David Maciejak, my co-maintainer moved to a different job and country and can not help with Hydra anymore - sadly! Wish you all the best!
 * Added patch from Ander Juaristi which adds h/H header options for http-form-*, great work, thanks!
 * Fixed for cisco-enable if an intial Login/Password is used (thanks to joswr1te for reporting)
